# WhistleBlower

./: .gitignore  Readme.md
contract/: Cargo.toml
contract/node/: .env  index.js  package-lock.json  package.json
contract/src/: contract.rs  msg.rs  state.rs
frontend-approuter/: package-lock.json  package.json
frontend-approuter/src/app/: layout.tsx  page.tsx  wrapper.tsx
frontend-approuter/src/app/post/: page.tsx  post.tsx
frontend-approuter/src/components/: Comments.tsx  ConnectWallet.tsx  PostView.tsx  addpost.tsx  functions.ts  postCard.tsx  secretname.tsx
frontend-approuter/src/db/: index.ts
frontend-approuter/src/store/: posts.ts  secret.ts
next-frontend/: .env.example  .env.local  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
next-frontend-page/: package.json  tsconfig.json
next-frontend-page/src/components/: VoteAndComment.tsx  addpost.tsx  functions.ts
next-frontend-page/src/pages/: _app.tsx  index.tsx
next-frontend-page/src/pages/api/: addpost.ts  (+2 more)
next-frontend-page/src/store/: comments.ts  currentPost.ts
next-frontend/src/app/: page.tsx
next-frontend/src/components/: Card.tsx  Comments.tsx  ConnectWallet.tsx  PostView.tsx  VoteAndComment.tsx  addpost.tsx  addpostside.tsx  functions.ts  google-gemini-effect.tsx  postCard.tsx
next-frontend/src/db/: dbConnect.ts  index.ts
next-frontend/src/pages/: _app.tsx  _document.tsx  addpost.tsx  index.tsx  post.tsx
next-frontend/src/store/: comments.ts  postAtomFamily.ts  posts.ts  secret.ts  vote.ts  walletConnected.ts
next-frontend/src/styles/: globals.css
(+19 files in other folders)
