[package]
name = "secret_contract_example"
version = "0.1.0"
authors = ["SecretTemplateExample"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.10" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.10" }
schemars = "0.8.8"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.7.5" }
secret-toolkit = { version = "0.10.0", default-features = false, features = [
    "utils",
    "serialization",
    "viewing-key",
    "permit",
] }
secret-toolkit-storage = "0.10.0"
thiserror = { version = "1.0.50" }

[dev-dependencies]
cosmwasm-schema = { git = "https://github.com/scrtlabs/cosmwasm/", branch = "secret" }